--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+anyhow = "1.0.101"
 clap = { version = "4.5.57", features = ["derive"] }
 rand = "0.10.0"
 serde = { version = "1.0.228", features = ["derive"] }
