--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ clap = { version = "4.5.57", features = ["derive"] }
 rand = "0.10.0"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.149"
+thiserror = "2.0.18"
